@@ -1,48 +1,48 @@
 <?xml version="1.0"?>
 <bookmarks>
-  <folder name="Software">
-        <bookmark name="Nautilus" uri="http://services.eazel.com/redirect?http://nautilus.eazel.com"/>
+  <folder _name="Software">
+        <bookmark _name="Nautilus" uri="http://services.eazel.com/redirect?http://nautilus.eazel.com"/>
         <separator/>
-        <bookmark name="Eazel" uri="http://services.eazel.com/redirect?http://www.eazel.com"/>
-        <bookmark name="Ximian" uri="http://services.eazel.com/redirect?http://www.ximian.com"/>
-        <bookmark name="Linux at IBM" uri="http://services.eazel.com/redirect?http://www.ibm.com/linux/"/>
-        <bookmark name="Borland" uri="http://services.eazel.com/redirect?http://www.borland.com/kylix/"/>
-        <bookmark name="Sun StarOffice" uri="http://services.eazel.com/redirect?http://www.sun.com/products/staroffice/"/>
-        <bookmark name="VMWare" uri="http://services.eazel.com/redirect?http://www.vmware.com"/>
+        <bookmark _name="Eazel" uri="http://services.eazel.com/redirect?http://www.eazel.com"/>
+        <bookmark _name="Ximian" uri="http://services.eazel.com/redirect?http://www.ximian.com"/>
+        <bookmark _name="Linux at IBM" uri="http://services.eazel.com/redirect?http://www.ibm.com/linux/"/>
+        <bookmark _name="Borland" uri="http://services.eazel.com/redirect?http://www.borland.com/kylix/"/>
+        <bookmark _name="Sun StarOffice" uri="http://services.eazel.com/redirect?http://www.sun.com/products/staroffice/"/>
+        <bookmark _name="VMWare" uri="http://services.eazel.com/redirect?http://www.vmware.com"/>
   </folder>
-  <folder name="Hardware">
-        <bookmark name="Compaq" uri="http://services.eazel.com/redirect?http://www.compaq.com/products/software/linux/"/>
-        <bookmark name="CNET Computers.com" uri="http://services.eazel.com/redirect?http://www.computers.com?tag=pt.eazel.0.0.co"/>
-        <bookmark name="Dell" uri="http://services.eazel.com/redirect?http://www.dell.com/linux/"/>
-        <bookmark name="Hewlett-Packard" uri="http://services.eazel.com/redirect?http://www.hp.com/go/linux/"/>
-        <bookmark name="IBM" uri="http://services.eazel.com/redirect?http://www.pc.ibm.com/linux"/>
+  <folder _name="Hardware">
+        <bookmark _name="Compaq" uri="http://services.eazel.com/redirect?http://www.compaq.com/products/software/linux/"/>
+        <bookmark _name="CNET Computers.com" uri="http://services.eazel.com/redirect?http://www.computers.com?tag=pt.eazel.0.0.co"/>
+        <bookmark _name="Dell" uri="http://services.eazel.com/redirect?http://www.dell.com/linux/"/>
+        <bookmark _name="Hewlett-Packard" uri="http://services.eazel.com/redirect?http://www.hp.com/go/linux/"/>
+        <bookmark _name="IBM" uri="http://services.eazel.com/redirect?http://www.pc.ibm.com/linux"/>
   </folder>
-  <folder name="News and Media">
-         <bookmark name="CNET Linux Center" uri="http://services.eazel.com/redirect?http://linux.cnet.com?tag=pt.eazel.0.0.1x"/>
-         <bookmark name="OSDN" uri="http://services.eazel.com/redirect?http://www.osdn.com"/>
-         <bookmark name="Slashdot" uri="http://services.eazel.com/redirect?http://www.slashdot.org"/>
-         <bookmark name="ZDNet Linux Resource Center" uri="http://services.eazel.com/redirect?http://chkpt.zdnet.com/chkpt/hud0022900/linux.zdnet.com"/>
+  <folder _name="News and Media">
+         <bookmark _name="CNET Linux Center" uri="http://services.eazel.com/redirect?http://linux.cnet.com?tag=pt.eazel.0.0.1x"/>
+         <bookmark _name="OSDN" uri="http://services.eazel.com/redirect?http://www.osdn.com"/>
+         <bookmark _name="Slashdot" uri="http://services.eazel.com/redirect?http://www.slashdot.org"/>
+         <bookmark _name="ZDNet Linux Resource Center" uri="http://services.eazel.com/redirect?http://chkpt.zdnet.com/chkpt/hud0022900/linux.zdnet.com"/>
   </folder>
-  <folder name="Linux Companies">
-         <bookmark name="Caldera" uri="http://services.eazel.com/redirect?http://www.caldera.com"/>
-         <bookmark name="Linuxcare" uri="http://services.eazel.com/redirect?http://www.linuxcare.com"/>
-         <bookmark name="Red Hat" uri="http://services.eazel.com/redirect?http://www.redhat.com"/>
-         <bookmark name="VA Linux" uri="http://services.eazel.com/redirect?http://www.valinux.com"/>
+  <folder _name="Linux Companies">
+         <bookmark _name="Caldera" uri="http://services.eazel.com/redirect?http://www.caldera.com"/>
+         <bookmark _name="Linuxcare" uri="http://services.eazel.com/redirect?http://www.linuxcare.com"/>
+         <bookmark _name="Red Hat" uri="http://services.eazel.com/redirect?http://www.redhat.com"/>
+         <bookmark _name="VA Linux" uri="http://services.eazel.com/redirect?http://www.valinux.com"/>
   </folder>
-  <folder name="Web Services">
-         <bookmark name="CollabNet" uri="http://services.eazel.com/redirect?http://www.collab.net"/>
-         <bookmark name="Myplay" uri="http://services.eazel.com/redirect?http://www.myplay.com/?sv=095-07-578"/>
-         <bookmark name="SourceForge" uri="http://services.eazel.com/redirect?http://www.sourceforge.net"/>
-         <bookmark name="SourceXchange" uri="http://services.eazel.com/redirect?http://www.sourcexchange.com"/>
+  <folder _name="Web Services">
+         <bookmark _name="CollabNet" uri="http://services.eazel.com/redirect?http://www.collab.net"/>
+         <bookmark _name="Myplay" uri="http://services.eazel.com/redirect?http://www.myplay.com/?sv=095-07-578"/>
+         <bookmark _name="SourceForge" uri="http://services.eazel.com/redirect?http://www.sourceforge.net"/>
+         <bookmark _name="SourceXchange" uri="http://services.eazel.com/redirect?http://www.sourcexchange.com"/>
   </folder>
-  <folder name="Linux Resources">
-         <bookmark name="Debian.org" uri="http://services.eazel.com/redirect?http://www.debian.org"/>
-         <bookmark name="Freshmeat.net" uri="http://services.eazel.com/redirect?http://www.freshmeat.net"/>
-         <bookmark name="GNOME.org" uri="http://services.eazel.com/redirect?http://www.gnome.org"/>
-         <bookmark name="GNU.org" uri="http://services.eazel.com/redirect?http://www.gnu.org"/>
-         <bookmark name="Linux Online" uri="http://services.eazel.com/redirect?http://www.linux.org"/>
-         <bookmark name="Linux Documentation Project" uri="http://services.eazel.com/redirect?http://www.linuxdoc.org"/>
-         <bookmark name="LinuxNewbie.org" uri="http://services.eazel.com/redirect?http://www.linuxnewbie.org"/>
-         <bookmark name="OpenOffice" uri="http://services.eazel.com/redirect?http://www.openoffice.org"/>
+  <folder _name="Linux Resources">
+         <bookmark _name="Debian.org" uri="http://services.eazel.com/redirect?http://www.debian.org"/>
+         <bookmark _name="Freshmeat.net" uri="http://services.eazel.com/redirect?http://www.freshmeat.net"/>
+         <bookmark _name="GNOME.org" uri="http://services.eazel.com/redirect?http://www.gnome.org"/>
+         <bookmark _name="GNU.org" uri="http://services.eazel.com/redirect?http://www.gnu.org"/>
+         <bookmark _name="Linux Online" uri="http://services.eazel.com/redirect?http://www.linux.org"/>
+         <bookmark _name="Linux Documentation Project" uri="http://services.eazel.com/redirect?http://www.linuxdoc.org"/>
+         <bookmark _name="LinuxNewbie.org" uri="http://services.eazel.com/redirect?http://www.linuxnewbie.org"/>
+         <bookmark _name="OpenOffice" uri="http://services.eazel.com/redirect?http://www.openoffice.org"/>
   </folder>
 </bookmarks>
